testing/errors/alreadydefined1.a
;ACME 0.96.5
	a = 3.1
	a = 3.0	; -> "already defined" (value has changed)
